--- a/allreferences.bib
+++ b/allreferences.bib
@@ -153,23 +153,14 @@
   year		= {2017}
 }
 
-@InProceedings{	  beutel,
-  author	= {{Beutel}, Alex and {Chen}, Jilin and {Zhao}, Zhe and
-		  {Chi}, Ed H.},
+@InProceedings{	  beutel2017data,
   title		= "{Data Decisions and Theoretical Implications when
 		  Adversarially Learning Fair Representations}",
+  author	= {{Beutel}, Alex and {Chen}, Jilin and {Zhao}, Zhe and
+		  {Chi}, Ed H.},
   booktitle	= {Workshop on Fairness, Accountability, and Transparency in
 		  Machine Learning (FAT/ML)},
   year		= "2017"
-}
-
-@InProceedings{	  beutel2017data,
-  title		= {Data decisions and theoretical implications when
-		  adversarially learning fair representations},
-  author	= {Beutel, Alex and Chen, Jilin and Zhao, Zhe and Chi, Ed H},
-  booktitle	= {Workshop on Fairness, Accountability, and Transparency in
-		  Machine Learning (FAT/ML)},
-  year		= {2017}
 }
 
 @InProceedings{	  blum2020recovering,
@@ -523,28 +514,13 @@
   organization	= {ACM}
 }
 
-@Article{	  edwards2015censoring,
-  title		= {Censoring representations with an adversary},
-  author	= {Edwards, Harrison and Storkey, Amos},
-  journal	= {arXiv preprint arXiv:1511.05897},
-  year		= {2015}
-}
-
 @InProceedings{	  edwards2016censoring,
   title		= "Censoring Representations with an Adversary",
-  author	= "Harrison Edwards and Amos Storkey",
+  author	= {{Edwards}, Harrison and {Storkey}, Amos},
   year		= "2016",
   month		= "2",
   booktitle	= "International Conference in Learning Representations
-		  (ICLR2016)"
-}
-
-@InProceedings{	  edwardsstorkey,
-  author	= {{Edwards}, Harrison and {Storkey}, Amos},
-  title		= "{Censoring Representations with an Adversary}",
-  booktitle	= {International Conference on Learning Representations
-		  (ICLR)},
-  year		= "2016"
+		  (ICLR)"
 }
 
 @Article{	  everitt2017reinforcement,
@@ -1168,7 +1144,9 @@
   doi		= {10.1007/978-3-030-58604-1},
   booktitle	= {Computer Vision – ECCV 2020},
   numpages	= {779},
-  location	= {Glasgow, UK}
+  location	= {Glasgow, UK},
+  sortname      = {Kehrenberg},
+  sorttitle	= {b}
 }
 
 @Article{	  kehrenberg2018tuning,
@@ -1198,7 +1176,9 @@
   journal	= {Frontiers in Artificial Intelligence},
   volume	= {3},
   pages		= {33},
-  year		= {2020}
+  year		= {2020},
+  sortname      = {Kehrenberg},
+  sorttitle	= {a}
 }
 
 @Article{	  kehrenberg2020zeroshot,
@@ -1278,8 +1258,7 @@
 		  biased data},
   author	= {Kim, Byungju and Kim, Hyunwoo and Kim, Kyungsu and Kim,
 		  Sungjin and Kim, Junmo},
-  booktitle	= {Proceedings of the IEEE conference on computer vision and
-		  pattern recognition},
+  booktitle	= {Computer Vision and Pattern Recognition (CVPR)},
   pages		= {9012--9020},
   year		= {2019}
 }
@@ -1478,15 +1457,6 @@
   year		= {2019}
 }
 
-@InProceedings{	  ln2l,
-  author	= {Byungju Kim and Hyunwoo Kim and Kyungsu Kim and Sungjin
-		  Kim and Junmo Kim},
-  title		= {Learning Not to Learn: Training Deep Neural Networks with
-		  Biased Data},
-  booktitle	= {Computer vision and pattern recognition (CVPR)},
-  year		= {2019}
-}
-
 @InCollection{	  LocAbbRaiBauetal19,
   title		= {On the Fairness of Disentangled Representations},
   author	= {Locatello, Francesco and Abbati, Gabriele and Rainforth,
@@ -1520,28 +1490,10 @@
   year		= {2019}
 }
 
-@InProceedings{	  louizos2015variational,
-  title		= {The variational fair autoencoder},
-  author	= {Louizos, Christos and Swersky, Kevin and Li, Yujia and
-		  Welling, Max and Zemel, Richard},
-  booktitle	= {International Conference on Learning Representations
-		  (ICLR)},
-  year		= {2016}
-}
-
-@Article{	  louizos2016variational,
-  author	= {Christos Louizos and Kevin Swersky and Yujia Li and Max
-		  Welling and Richard S. Zemel},
-  title		= {The Variational Fair Autoencoder},
-  year		= {2016},
-  booktitle	= {International Conference on Learning Representations
-		  (ICLR)}
-}
-
-@InProceedings{	  LouSweLi15,
+@InProceedings{	  louizos2016variational,
   author	= {{Louizos}, Christos and {Swersky}, Kevin and {Li}, Yujia
 		  and {Welling}, Max and {Zemel}, Richard},
-  title		= "{The Variational Fair Autoencoder}",
+  title		= {The Variational Fair Autoencoder},
   booktitle	= {International Conference on Learning Representations
 		  (ICLR)},
   year		= "2016"
@@ -2250,8 +2202,8 @@
 }
 
 @Article{	  zhang2018visual,
-  title		= {Visual interpretability for deep learning: a survey},
-  author	= {Zhang, Quan-shi and Zhu, Song-Chun},
+  title		= {Visual interpretability for Deep Learning: a survey},
+  author	= {Zhang, Quanshi and Zhu, Song-Chun},
   journal	= {Frontiers of Information Technology \& Electronic
 		  Engineering},
   volume	= {19},
